# blackbook

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  bbMain.cpp  bbResources.qrc
cmake/: bbUtilities.cmake
core/: CMakeLists.txt  bbCostSplitCalculator.cpp  bbCostSplitCalculator.h  bbCostSplitCalculatorTest.cpp  bbDebtsTableModel.cpp  bbDebtsTableModel.h  bbEntry.h  bbMainWindow.cpp  bbMainWindow.h  bbPayment.cpp  bbPaymentEntry.cpp  bbPaymentEntry.h  bbPaymentsTableModel.cpp  bbPaymentsTableModel.h  bbPersonList.cpp  bbPersonList.h  bbPersonsTableModel.cpp  bbPersonsTableModel.h  bbUtilities.cpp  bbXmlFile.cpp  bbXmlFile.h
desktop_app/: CMakeLists.txt  bbResources.qrc
desktop_app/cmake/: bbUtilities.cmake
desktop_app/core/: CMakeLists.txt  bbCostSplitCalculator.cpp  bbCostSplitCalculator.h  bbDebtEntry.cpp  bbDebtEntry.h  bbDebtsTableModel.cpp  bbDebtsTableModel.h  bbEntry.cpp  bbMainWindow.h  bbPayment.h  bbPersonsTableModel.cpp  bbTableModel.cpp  bbTableModel.h  bbUtilities.h  bbXmlFile.cpp
desktop_app/icons/: Gordon-Irving-IWork-10-Pages-black.icns
desktop_app/testing/: bbtestCatchImpl.h
provisioning/: readme.txt  server.ini  setup.retry  setup.yaml
pyserver/: requirements.txt  run_server.py  runserver.sh  test_flask_server.py  test_server.py  test_trip.py
pyserver/costsplitter/: balance_calculator.py  trip.py  trip_app.py  trip_database.py  trip_manager.py  trip_model_crud.py
pyserver/server/: flask_server.py  flaskplus_server.py  help_text.py  server.py  swagger_spec.yml
service-tests/: .gitignore  README.md  build.gradle  settings.gradle
service-tests/gradle/wrapper/: gradle-wrapper.properties
service-tests/src/test/groovy/: BlackbookAPI.groovy  Server.groovy
service-tests/src/test/groovy/blackbook/: BlackbookAPI.groovy  PaymentCrud.groovy  PaymentValidation.groovy  PersonCrud.groovy  PersonValidation.groovy  Server.groovy  TripsCrud.groovy  TripsValidation.groovy
service-tests/src/test/resources/: log4j.xml
testUtilities/: CMakeLists.txt  bbtestCatchImpl.cpp
testing/: CMakeLists.txt  bbtestCatchMain.cpp
